--- a/client/src/components/notification/notification.css
+++ b/client/src/components/notification/notification.css
@@ -11,7 +11,7 @@
 
 .notification-count {
     display: flex;
-    background: #00bd9b;
+    background: #8603a5;
     height: 25px;
     width: 25px;
     font-size: 14px;
