--- a/client/src/components/userChat/userChat.css
+++ b/client/src/components/userChat/userChat.css
@@ -4,30 +4,6 @@
     line-height: 25px;
 }
 
-.user-online {
-    display: inline-block;
-    height: 12px;
-    width: 12px;
-    border-radius: 50%;
-    background: rgb(0, 219, 0);
-    position: absolute;
-    top: -3px;
-    right: -3px;
-    z-index: 2;
-}
-
-.this-user-notifications {
-    display: flex;
-    background: #00bd9b;
-    height: 20px;
-    width: 20px;
-    font-size: 12px;
-    font-weight: 700;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-}
-
 .text, .date {
     font-size: 14px;
     color: rgb(180, 180, 180);
@@ -46,4 +22,44 @@
     position: relative;
     border-bottom: 1px solid rgb(100, 100, 100);
     width: 380px;
+    transition: all 0.3s ease;
+}
+
+.avatar-only {
+    align-items:center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.relative-avatar {
+    position: relative;
+}
+
+.user-online {
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    background: rgb(0, 219, 0);
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+}
+
+.this-user-notifications {
+    display: flex;
+    background: #8603a5;
+    height: 20px;
+    width: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
 }
