--- a/client/src/pages/chat/chat.css
+++ b/client/src/pages/chat/chat.css
@@ -1,3 +1,12 @@
 .messages-box {
     height: 85vh;
+    transition: margin 0.3s ease-in-out;
+}
+
+.messages-box.collapsed {
+    margin-left: -300px;
+}
+
+.messages-box.expanded {
+    margin-left: 0;
 }
